src/test/ui/issues/issue-3214.stderr
error[E0401]: can't use generic parameters from outer function
  --> $DIR/issue-3214.rs:3:12
   |
LL | fn foo<T>() {
   |    --- - type parameter from outer function
   |    |
   |    try adding a local generic parameter in this method instead
LL |     struct Foo {
LL |         x: T,
   |            ^ use of generic parameter from outer function

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/issue-3214.rs:6:26
   |
LL |     impl<T> Drop for Foo<T> {
   |                          ^ unexpected type argument

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0401.
For more information about an error, try `rustc --explain E0107`.
